--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-openai>=0.2.0",
     "langchain-tavily>=0.2.17",
     "langsmith[claude-agent-sdk]>=0.7.4",
+    "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "tavily-python>=0.7.21",
 ]
