--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,15 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "black>=26.1.0",
+    "dotenv>=0.9.9",
     "isort>=8.0.0",
     "langchain>=1.2.10",
+    "langchain-community>=0.4.1",
     "langchain-ollama>=1.0.1",
     "langchain-openai>=0.2.0",
+    "langchain-pinecone>=0.2.13",
     "langchain-tavily>=0.2.17",
+    "langchainhub>=0.1.21",
     "langsmith[claude-agent-sdk]>=0.7.4",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
